fixed a css issue where avatar was too large in mobile

--- a/source/client/app/styles/main.scss
+++ b/source/client/app/styles/main.scss
@@ -393,3 +393,7 @@ a.fa{
   padding-bottom: 5px;
   border-bottom: $gray-warm-light solid 2px;
 }
+
+.no-right-pad {
+  padding-right: 0;
+}
